# agentic_bootcamp_nghieppham

./: .env.example  .gitignore  README.md  agentops_course_v2.xlsx  environment.yml  main.py  pyproject.toml  requirements.txt  test.py  verify_keys.py
.cursor/rules/: create-a-react-agent.mdc
agent_101/: checkpoint_memory_lab.ipynb  graph_search_tools_exercise.ipynb  hitl_interrupt_exercise.ipynb  streaming_lab.ipynb
attacks/: agent_tools.py  agents.py  run_attacks.py
config/guardrails/: actions.py  config.yml  prompts.yml
db/: setup_database.py  techstore.db
evaluation/: eval_agent_langfuse.ipynb  eval_agent_langsmith.ipynb
graphRAG/: graph_rag_lab.ipynb
graphRAG/documents/: aura_holding.txt  beacon_retail.txt  crest.txt
notebooks/: Lab1_Attacks.ipynb  Lab2_NeMo_Solutions.ipynb
project/: agentops_tour_rewriter.ipynb  run_pipeline.py  tour_rewriter_agent.ipynb  tours_insert.sql
prompt_n_observability/: prompt_management_langfuse.ipynb  prompt_management_langsmith.ipynb
scripts/: chatbot_no_guardrails.py  chatbot_with_guardrails.py  run_attack_tests.py  setup_check.py
tests/: conftest.py  test_guardrails.py  test_setup.py
vanilaRAG/: spaceship.txt  vanilla_rag_lab.ipynb
